@@ -18,3 +18,4 @@ save: 60
 statsall: 40
 spiritball: 60
 itemlist: 40
+effect: 40
