@@ -442,7 +442,7 @@ void db_foreach(struct dbt *table,int (*func)(void*,void*,va_list),...)
 		sp=0;
 		while(1){
 			if (!p->data) {
-				printf("Warning: no data for key %d in db_foreach (db.c) !\n",p->key);
+				printf("Warning: no data for key %d in db_foreach (db.c) !\n",(int)p->key);
 			} else {
 				func(p->key, p->data, ap);
 			}
